[package]
name = "fvm_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = { version = "0.8.4", default-features = false }
fvm_sdk = { version = "1.0.0-rc.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_shared = { version = "0.8.0", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.1"